# vector

./: .companies.toml  .dockerignore  .editorconfig  .envrc  .gitattributes  .gitbook.yaml  .gitignore  .gitmodules  .graphqlconfig  .htmltest.yml  .markdownlint.jsonc  .markdownlintignore  .markdownlintrc  .metadata.toml  .prettierignore  .prettierrc.json  .rustfmt.toml  .test.output  .typos.toml  .vale.ini  22409_per_metric_set_expire_metrics_secs.feature.md  AGENTS.md  AI_POLICY.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMIT_MESSAGE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DEVELOPING.md  DEVELOPMENT.md  DOCUMENTING.md  Dockerfile  Dockerfile.bench  Dockerfile.debug  INTEGRATION_TEST_OPTIMIZATION.md  LICENSE  LICENSE-3rdparty.csv  Makefile  (+60 more)
ci/: semver.sh  (+3 more)
examples/perf_vrl/: Cargo.toml
examples/perf_vrl/bench/: perf.sh
examples/perf_vrl/bench/inputs/: condition_eq_literal.vrl  datadog_agent_remap_blackhole.vrl  datadog_agent_remap_datadog_logs.vrl  parse_json_fallible.vrl  parse_json_infallible.vrl
examples/perf_vrl/src/: main.rs
lib/api/: Cargo.toml
lib/api/src/: schema.rs  server.rs
lib/buffer-lazy/: Cargo.toml
lib/buffer-lazy/src/: layer.rs  lib.rs  service.rs
lib/buffer-lazy/tests/: lazy.rs
lib/codecs/: Cargo.toml
lib/codecs/benches/: json_decimal_bench.rs
lib/codecs/src/: avro.rs  decoder_framed_read.rs  gelf.rs  internal_events.rs  lib.rs  ready_frames.rs
lib/codecs/src/common/: length_delimited.rs  mod.rs  protobuf.rs
lib/codecs/tests/: avro.rs  avro_generate_test_case.rs  gelf.rs  native.rs  native_json.rs  otlp.rs  protobuf.rs  varint_framing.rs
lib/config-schema/: Cargo.toml
lib/config-schema/src/: main.rs  renderer.rs  schema.rs
lib/derive_is_enum_variant/: Cargo.toml
lib/derive_is_enum_variant/src/: lib.rs
lib/derive_is_enum_variant/tests/: tests.rs
lib/dnsmsg-parser/: Cargo.toml  LICENSE
lib/dnsmsg-parser/benches/: benches.rs
lib/dnsmsg-parser/src/: dns_message.rs  dns_message_parser.rs  ede.rs  lib.rs
lib/dnstap-parser/: Cargo.toml  build.rs
lib/dnstap-parser/proto/: dnstap.proto
lib/dnstap-parser/src/: internal_events.rs  parser.rs  schema.rs
lib/docs-renderer/: Cargo.toml
lib/docs-renderer/src/: main.rs  renderer.rs
lib/drain-log/: Cargo.toml  LICENSE  NOTICE
lib/drain-log/src/: lib.rs  prefilter.rs  render.rs  tokenizer.rs  tree.rs
lib/enrichment/: Cargo.toml
lib/enrichment/src/: find_enrichment_table_records.rs  get_enrichment_table_record.rs  lib.rs  tables.rs  test_util.rs  vrl_util.rs
lib/envoy-proto/: Cargo.toml  build.rs
lib/envoy-proto/src/: convert.rs  lib.rs
lib/event/: Cargo.toml  build.rs
lib/event/proto/: event.proto
lib/event/src/: discriminant.rs  lib.rs  merge.rs  merge_state.rs
lib/file-source/: Cargo.toml
lib/file-source-common/: Cargo.toml  LICENSE
lib/file-source-common/src/: buffer.rs  checkpointer.rs  fingerprinter.rs  internal_events.rs  lib.rs  metadata_ext.rs
lib/file-source/benches/: buffer.rs
lib/file-source/src/: buffer.rs  checkpointer.rs  file_server.rs  file_watcher.rs  fingerprinter.rs  internal_events.rs  lib.rs  metadata_ext.rs  paths_provider.rs
lib/file-source/tests/: glob.rs
lib/foreign-modules/: Cargo.toml
lib/foreign-modules/src/: hostcall.rs  lib.rs
lib/ifile-source/: Cargo.toml
lib/ifile-source/benches/: buffer.rs
lib/ifile-source/src/: buffer.rs  checkpointer.rs  file_server.rs  fingerprinter.rs  ifile_server.rs  internal_events.rs  lib.rs
lib/k8s-e2e-tests/: Cargo.toml
lib/k8s-e2e-tests/src/: lib.rs  metrics.rs
lib/k8s-e2e-tests/tests/: vector-agent.rs  vector-aggregator.rs  vector-dd-agent-aggregator.rs  vector.rs
lib/k8s-runtime/: Cargo.toml
lib/k8s-runtime/src/: debounce.rs  lib.rs  reflector.rs  resource_version.rs  test_util.rs
lib/k8s-test-framework/: Cargo.toml
lib/k8s-test-framework/src/: exec_tail.rs  framework.rs  helm_values_file.rs  interface.rs  kubernetes_version.rs  label.rs  lib.rs  lock.rs  log_lookup.rs  namespace.rs  pod.rs  port_forward.rs  reader.rs  resource_file.rs  restart_rollout.rs  temp_file.rs  test_pod.rs  up_down.rs  util.rs  vector.rs  wait_for_resource.rs  wait_for_rollout.rs
lib/kubernetes-test-framework/: Cargo.toml
lib/kubernetes-test-framework/src/: framework.rs  interface.rs  lib.rs  log_lookup.rs  namespace.rs  resource_file.rs  test_pod.rs  util.rs  vector.rs  wait_for_resource.rs  wait_for_rollout.rs
lib/loki-logproto/: Cargo.toml  build.rs
lib/loki-logproto/proto/: README  gogo.proto  logproto.proto  push.proto  stats.proto
lib/loki-logproto/src/: lib.rs
lib/lookup/: Cargo.toml  build.rs  head
lib/lookup/benches/: lookup.rs
lib/lookup/src/: error.rs  field.rs  lib.rs  parser.rs  path.lalrpop
lib/opentelemetry/: Cargo.toml  build.rs
lib/opentelemetry-proto/: Cargo.toml  build.rs
lib/opentelemetry-proto/src/: common.rs  convert.rs  convert_from.rs  convert_to.rs  lib.rs  logs.rs  metrics.rs  proto.rs  spans.rs  tests.rs  types.rs
lib/opentelemetry/src/: convert.rs  lib.rs
lib/parsing/: Cargo.toml
lib/parsing/src/: lib.rs  query_string.rs  ruby_hash.rs  value.rs
lib/prometheus-parser/: Cargo.toml  build.rs
lib/prometheus-parser/proto/: prometheus-types.proto
lib/prometheus-parser/src/: lib.rs  line.rs
lib/remap-cli/: Cargo.toml  TODO.md  test.jsonl
lib/remap-cli/src/: cmd.rs  lib.rs  main.rs  repl.rs  tutorial.rs
vdev/: Cargo.toml  README.md
vdev/src/: app.rs  config.rs  environment.rs  features.rs  git.rs  macros.rs  main.rs  path_utils.rs  platform.rs  util.rs
vdev/src/commands/: build.rs  check.rs  cli.rs  compile_vrl_wasm.rs  complete.rs  component_docs.rs  crate_versions.rs  exec.rs  features.rs  fmt.rs  generate.rs  generate_vrl_examples.rs  info.rs  install_git_hooks.rs  mod.rs  package.rs  run.rs  status.rs  test.rs  test_vrl.rs  version.rs
vdev/src/repo/: core.rs  git.rs  mod.rs
vdev/src/testing/: build.rs  config.rs  docker.rs  integration.rs  mod.rs  runner.rs  state.rs
vdev/src/utils/: cargo.rs  command.rs  config.rs  deprecation.rs  environment.rs  features.rs  git.rs  macros.rs  mod.rs  paths.rs  platform.rs
(+20589 files in other folders)
